# optim_rnla_public

./: README.md  examplecode.ipynb  pyproject.toml  setup.cfg
optim_rnla/basisgeneration/: __init__.py  krylov.py
optim_rnla/example_problem/: __init__.py  optim_prob.py  prob_neggaussian.py  prob_rosenbrock.py  prob_sphere.py  prob_sumquares.py
optim_rnla/gep_solver/: RR.py  __init__.py
optim_rnla/optimiser/: __init__.py  tralgorithm.py  trs_via_GEP.py
optim_rnla/support_functions/: __init__.py  check_basis.py  check_eigval.py
optim_rnla/trs_problem/: __init__.py  trs_prob1.py  trs_prob2.py  trs_prob3.py  trs_prob4.py  trs_probgen.py  trsubproblem.py
tests/: test_basisgeneration.py  test_example_problem.py  test_gep_solver.py  test_optimiser.py  test_trs_prob.py
